--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,17 @@ node_modules
 package-lock.json
 hardhat.config.js
 yarn.lock
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
